k8/configmap-hpa.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: retail
  labels:
    name: retail
    monitoring: enabled
